--- a/codyhouse_schedule.html
+++ b/codyhouse_schedule.html
@@ -46,14 +46,14 @@
                     <div class="top-info"></div>
 
                     <ul>
-                        <li class="single-event" data-start="07:30" data-end="12:00" data-content="event-abs-circuit"
+                        <li class="single-event" data-start="07:30" data-end="12:00" data-content="members-A"
                             data-event="event-1">
                             <a href="#0">
                                 <em class="event-name">A</em>
                             </a>
                         </li>
 
-                        <li class="single-event" data-start="12:30" data-end="18:00" data-content="event-rowing-workout"
+                        <li class="single-event" data-start="12:30" data-end="18:00" data-content="members-C"
                             data-event="event-2">
                             <a href="#0">
                                 <em class="event-name">C</em>
@@ -66,15 +66,15 @@
                     <div class="top-info"></div>
 
                     <ul>
-                        <li class="single-event" data-start="08:00" data-end="13:00" data-content="event-rowing-workout"
-                            data-event="event-2">
+                        <li class="single-event" data-start="08:00" data-end="13:00" data-content="members-H"
+                            data-event="event-3">
                             <a href="#0">
                                 <em class="event-name">H</em>
                             </a>
                         </li>
 
                         <li class="single-event" data-start="13:30" data-end="18:00"
-                            data-content="event-restorative-yoga" data-event="event-4">
+                            data-content="members-D" data-event="event-4">
                             <a href="#0">
                                 <em class="event-name">D</em>
                             </a>
@@ -87,7 +87,7 @@
 
                     <ul>
                         <li class="single-event" data-start="08:00" data-end="13:30"
-                            data-content="event-restorative-yoga" data-event="event-4">
+                            data-content="members-B" data-event="event-5">
                             <a href="#0">
                                 <em class="event-name">B</em>
                             </a>
